test/corpus/arm_instructions.txt
================================================================================
Disassembly ARM Section With Raw Data
================================================================================

20000000:	00f42400                                .$..
20000004:	00000010                                ....
20000008:	00000001                                ....
2000000c:	00000000 00000003 20000200              ...........
20000018:	00000000 20000200 20000268 200002d0     ....... h.. ...
20000064:	20000018                                ...

--------------------------------------------------------------------------------

(source
  (source_location
    (address)
    (machine_code_bytes
      (byte))
    (raw_data))
  (source_location
    (address)
    (machine_code_bytes
      (byte))
    (raw_data))
  (source_location
    (address)
    (machine_code_bytes
      (byte))
    (raw_data))
  (source_location
    (address)
    (machine_code_bytes
      (byte)
      (byte)
      (byte))
    (raw_data))
  (source_location
    (address)
    (machine_code_bytes
      (byte)
      (byte)
      (byte)
      (byte))
    (raw_data))
  (source_location
    (address)
    (machine_code_bytes
      (byte))
    (raw_data)))


================================================================================
Disassembly ARM Section With ; Comment
================================================================================

8000200:	b510      	push	{r4, lr}
8000202:	4c05      	ldr	r4, [pc, #20]	; (8000218 <__do_global_dtors_aux+0x18>)

--------------------------------------------------------------------------------

(source
  (source_location
    (address)
    (machine_code_bytes
      (byte))
    (instruction))
  (source_location
    (address)
    (machine_code_bytes
      (byte))
    (instruction)
    (comment
      (address)
      (code_location
        (identifier)
        (hexadecimal)))))
