test/corpus/comment.txt
================================================================================
Comment With Hexadecimal 1
================================================================================

0x00000000004005f1	4c 8d 25 e8 07 20 00   	lea    0x2007e8(%rip),%r12        # 0x600de0

--------------------------------------------------------------------------------

(source
  (address)
  (machine_code_bytes
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte))
  (instruction)
  (comment
    (hexadecimal)))
