test/corpus/sample.txt
================================================================================
Bad Instruction
================================================================================

0x0000000000400674	61                           	(bad)

--------------------------------------------------------------------------------

(source
  (address)
  (machine_code_bytes
    (byte))
  (bad_instruction))

================================================================================
Bytes + Call 1
================================================================================

0x00000000004005cc	e8 7f fe ff ff         	callq  0x400450 <puts@plt>

--------------------------------------------------------------------------------

(source
  (address)
  (machine_code_bytes
    (byte)
    (byte)
    (byte)
    (byte)
    (byte))
  (instruction))


================================================================================
Bytes + Call 2
================================================================================

0x00000000004005a5	c7 45 ec 10 27 00 00   	movl   $0x2710,-0x14(%rbp)

--------------------------------------------------------------------------------

(source
  (address)
  (machine_code_bytes
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte)
    (byte))
  (instruction))


================================================================================
Code Caller C++ Template
================================================================================

0x40056c <std::vector<Something>::get_foo(int, double)+1>     mov    %rsp,%rbp

--------------------------------------------------------------------------------

(source
  (address)
  (code_location
    (identifier)
    (integer))
  (instruction))


================================================================================
Code Caller C++ operator>>
================================================================================

0x40056c <std::ostream::operator>>(SomeClass)+30>     mov    %rsp,%rbp

--------------------------------------------------------------------------------

(source
  (address)
  (code_location
    (identifier)
    (integer))
  (instruction))


================================================================================
Code Caller C++ operator+
================================================================================

0x40056c <std::ostream::operator+(int)>     mov    %rsp,%rbp

--------------------------------------------------------------------------------

(source
  (address)
  (code_location
    (identifier))
  (instruction))


================================================================================
Code Caller C++ operator+ + Offset
================================================================================

0x40056c <std::ostream::operator+(int)+10>     mov    %rsp,%rbp

--------------------------------------------------------------------------------

(source
  (address)
  (code_location
    (identifier)
    (integer))
  (instruction))


================================================================================
Code Caller Location - System + Offset
================================================================================

0x40056c <main()+1>     mov    %rsp,%rbp

--------------------------------------------------------------------------------

(source
  (address)
  (code_location
    (identifier)
    (integer))
  (instruction))


================================================================================
Code Location - System + Offset 1
================================================================================

0x400601 <__libc_csu_init>   sub    %r12,%rbp

--------------------------------------------------------------------------------

(source
  (address)
  (code_location
    (identifier))
  (instruction))


================================================================================
Code Location - System + Offset 2
================================================================================

0x400601 <__libc_csu_init+33>   sub    %r12,%rbp

--------------------------------------------------------------------------------

(source
  (address)
  (code_location
    (identifier)
    (number))
  (instruction))


================================================================================
No-op Line
================================================================================

0x400645                        nop

--------------------------------------------------------------------------------

(source
  (address)
  (instruction))


================================================================================
No-opl Line
================================================================================

0x4005d8                        nopl   0x0(%rax,%rax,1)

--------------------------------------------------------------------------------

(source
  (address)
  (instruction))
