test/corpus/spacing.txt
================================================================================
Spacing - No Space Between Bytes And Instructions 1
================================================================================


0x0000000000400530	48 83 3d b8 08 20 00 00	cmpq   $0x0,0x2008b8(%rip)        # 0x600df0

--------------------------------------------------------------------------------

(source
  (source_location
    (address)
    (machine_code_bytes
      (byte)
      (byte)
      (byte)
      (byte)
      (byte)
      (byte)
      (byte)
      (byte))
    (instruction)
    (comment
      (hexadecimal))))


================================================================================
Spacing - No Space Between Bytes And Instructions 2
================================================================================


0x0000000000400530	48 83 3d b8 08 20 00 00	cmpq   $0x0,0x2008b8(%rip)

--------------------------------------------------------------------------------

(source
  (source_location
    (address)
    (machine_code_bytes
      (byte)
      (byte)
      (byte)
      (byte)
      (byte)
      (byte)
      (byte)
      (byte))
    (instruction)))


================================================================================
Spacing - Only Spaces, No Tabs
================================================================================

0x0000000000400510     80 3d 1d 0b 20 00 00    cmpb   $0x0,0x200b1d(%rip)

--------------------------------------------------------------------------------

(source
  (source_location
    (address)
    (machine_code_bytes
      (byte)
      (byte)
      (byte)
      (byte)
      (byte)
      (byte)
      (byte))
    (instruction)))
